# nextcloud-notes-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  pypi.yml  superlinter.yml  test.yml
.vim/: coc-settings.json
docs/: api_exceptions.html  api_wrapper.html  index.html  note.html
nextcloud_notes_api/: __init__.py  api_exceptions.py  api_wrapper.py  documentation.md  note.py
scripts/: BuildDocs.ps1  build-docs.bash  run-tests.bash
tests/: conftest.py  test_api_exceptions.py  test_api_wrapper.py  test_nextcloud_notes_api.py  test_note.py
