[tool.poetry]
name = "nextcloud-notes-api"
version = "0.1.0"
description = ""
authors = ["coma64 <coma64@outlook.com>"]
keywords = ["nextcloud", "notes", "api"]

[tool.poetry.dependencies]
python = "^3.7"
requests-mock = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pdoc3 = "^0.9.2"
rope = "^0.18.0"
pytest-dotenv = "^0.5.2"
black = "^20.8b1"
jedi = "^0.18.0"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
skip-string-normalization = true
