[tool.poetry]
name = "nextcloud-notes-api"
version = "1.0.0"
description = "A Nextcloud Notes app API wrapper"
authors = ["coma64 <coma64@outlook.com>"]
keywords = ["nextcloud", "notes", "api", "api-wrapper"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/coma64/nextcloud-notes-api"
documentation = "https://coma64.github.io/nextcloud-notes-api/"

[tool.poetry.dependencies]
python = "^3.7"
requests-mock = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pdoc3 = "^0.9.2"
rope = "^0.18.0"
pytest-dotenv = "^0.5.2"
black = "^20.8b1"
jedi = "^0.18.0"
neovim = "^0.3.1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
